src/objects/training__c.object
<CustomObject>
    <fields>
        <fullName>Field10__c</fullName>
        <label>培训产品</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMARIS</fullName>
                </value>
                <value>
                    <fullName>Scout</fullName>
                </value>
                <value>
                    <fullName>路视-VX120</fullName>
                </value>
                <value>
                    <fullName>OPTOS Daytona</fullName>
                </value>
                <value>
                    <fullName>OPTOS 200TX</fullName>
                </value>
                <value>
                    <fullName>OPTOS P200</fullName>
                </value>
                <value>
                    <fullName>OPTOS California</fullName>
                </value>
                <value>
                    <fullName>LensAr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>培训级别</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>LevelⅠ</fullName>
                </value>
                <value>
                    <fullName>Level Ⅱ</fullName>
                </value>
                <value>
                    <fullName>Level Ⅲ</fullName>
                </value>
                <value>
                    <fullName>深度培训</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>培训证书类型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>原厂培训</fullName>
                </value>
                <value>
                    <fullName>内部培训</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>工程师培训</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>工程师培训名称</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>工程师培训</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>